fixed bug in phase shifts originating from normalization conventions (factor)

--- a/test/BenchmarkChiral.ini
+++ b/test/BenchmarkChiral.ini
@@ -12,6 +12,8 @@ Jmax = 0
 Elab = [0.001, 0.01, 0.1, 1., 2., 5., 10., 20., 40., 60., 80., 100., 200., 300.]    # [MeV]
 output = chiral
 channel = np
+factor = 0.636619772367581343
+
 
 
 [sampler]
