--- a/test/BenchmarkChiral.ini
+++ b/test/BenchmarkChiral.ini
@@ -1,18 +1,20 @@
 [params]
-hbarc = 197.327               # [MeV fm]
-m = 938.91884                 # [MeV]
+hbarc = 197.327                 # [MeV fm]
+m_neutron =  939.565421         # [MeV]
+m_proton = 938.272089           # [MeV]
+m = (m_neutron + m_proton) / 2  # [MeV]
 pot = chiral
 map = trns
-Nq = 60
-Nq1 = 40
-p1 = 500.                      # [MeV]
-p2 = 1200.                     # [MeV]
-p3 = 6000.                     # [MeV]
-Jmax = 0
-Elab = [0.001, 0.01, 0.1, 1., 2., 5., 10., 20., 40., 60., 80., 100., 200., 300.]    # [MeV]
+Nq = 50
+Nq1 = 30
+p1 = 500.                       # [MeV]
+p2 = 2000.                      # [MeV]
+p3 = 6000.                      # [MeV]
+Jmax = 1
+Elab = lin 0.001 300 100            # [MeV]
 output = chiral
 channel = np
-factor = 0.636619772367581343
+factor = 2/pi
 
 
 
