added logging for time stamps. need to fix orthogonalization step for greedy algo so that I can insert a single vector into the orthonormal set

--- a/test/BenchmarkMalflietTjon.ini
+++ b/test/BenchmarkMalflietTjon.ini
@@ -1,14 +1,14 @@
 [params]
 hbarc = 197.3286               # [MeV fm]
-m = 938.926                 # [MeV]
+m = 938.926                    # [MeV]
 pot = mt
 map = tan
-c = 1000                      # [MeV]
+c = 5                          # [fm^-1]
 Nx = 12
 Nq = 32
 Jmax = 0
 Elab = [20., 30., 40., 50.]    # [MeV]
-output = benchmark
+output = benchmark_mt
 channel = nn
 factor = 1.0
 
