--- a/test/TimeChiral.ini
+++ b/test/TimeChiral.ini
@@ -5,14 +5,14 @@ m_proton = 938.272089           # [MeV]
 m = (m_neutron + m_proton) / 2  # [MeV]
 pot = chiral
 map = trns
-Nq = 40
-Nq1 = 25
+Nq = 80
+Nq1 = 50
 p1 = 2.5                        # [fm^-1]
 p2 = 6.0                        # [fm^-1]
 p3 = 30.0                       # [fm^-1]
-Jmax = 4
-Elab = [0.001, 0.01, 0.1, 1.0, 10., 20., 50., 100., 200., 300.]         # [MeV]
-output = benchmark_chiral
+Jmax = 1
+Elab = [10.]         # [MeV]
+output = time_chiral_Nq80
 channel = np
 factor = 2/pi
 
@@ -22,4 +22,4 @@ factor = 2/pi
 seed = 213
 Ntrain = 20
 Ntest = 20
-tol = 1E-12
+tol = 1E-8
