--- a/test/TimeChiral.ini
+++ b/test/TimeChiral.ini
@@ -4,22 +4,28 @@ m_neutron =  939.565421         # [MeV]
 m_proton = 938.272089           # [MeV]
 m = (m_neutron + m_proton) / 2  # [MeV]
 pot = chiral
+factor = 2/pi
+
 map = trns
-Nq = 80
-Nq1 = 50
+Nq = 40
+Nq1 = 25
 p1 = 2.5                        # [fm^-1]
 p2 = 6.0                        # [fm^-1]
 p3 = 30.0                       # [fm^-1]
-Jmax = 1
-Elab = [10.]         # [MeV]
-output = time_chiral_Nq80
+
 channel = np
-factor = 2/pi
+Jmax = 1
+Elab = [20.]                    # [MeV]
+load_pot = True
+pot_file = chiral_Nq{Nq}
+output = time_chiral_Nq40
 
-
-
-[sampler]
 seed = 213
-Ntrain = 20
-Ntest = 20
-tol = 1E-8
+Ncand = 100
+Ntest = 100
+Ninit = 2
+Nmax = 20
+resample_val = False
+Nval = 100
+svd_tol = 1E-8
+err_tol = 1E-8
