fixed coupled channel, now need to clean up

--- a/test/BenchmarkChiral.ini
+++ b/test/BenchmarkChiral.ini
@@ -12,14 +12,15 @@ p2 = 6.0                        # [fm^-1]
 p3 = 30.0                       # [fm^-1]
 Jmax = 4
 Elab = [0.001, 0.01, 0.1, 1.0, 10., 20., 50., 100., 200., 300.]         # [MeV]
-output = benchmark_chiral
 channel = np
 factor = 2/pi
-
-
+load_pot = False
+pot_file = benchmark_chiral_Nq{Nq}
+output = benchmark_chiral_Nq{Nq}
 
 [sampler]
 seed = 213
 Ntrain = 20
 Ntest = 20
-tol = 1E-12
+svd_tol = 1E-8
+err_tol = 1E-8
