started breaking TMatrix class into smaller pieces. need to add timing info back in

--- a/test/BenchmarkEmulator.ini
+++ b/test/BenchmarkEmulator.ini
@@ -5,23 +5,27 @@ m_proton = 938.272089           # [MeV]
 m = (m_neutron + m_proton) / 2  # [MeV]
 pot = chiral
 map = trns
-Nq = 40
-Nq1 = 25
-p1 = 2.5                        # [fm^-1]
-p2 = 6.0                        # [fm^-1]
+Nq = 60
+Nq1 = 50
+p1 = 3.0                        # [fm^-1]
+p2 = 10.0                        # [fm^-1]
 p3 = 30.0                       # [fm^-1]
 Jmax = 1
-Elab = [20.]         # [MeV]
+Elab = lin 0.01 300. 50        # [MeV]
 channel = np
 factor = 2/pi
-load_pot = True
+load_pot = False
 pot_file = benchmark_emulator_Nq{Nq}
 output = benchmark_emulator_Nq{Nq}
-
-[sampler]
-seed = 213
-Ntrain = 20
-Ncand = 40
-Ntest = 20
+seed = 17
 svd_tol = 1E-8
 err_tol = 1E-8
+Ntest = 100
+Ntrain = 50
+Ninit = 5
+Ncand = 1000
+Nmax = 50
+scale_min = 0.5
+scale_max = 1.5
+static_LECs = [0, 10, 11]
+
