--- a/test/BenchmarkChiral.ini
+++ b/test/BenchmarkChiral.ini
@@ -5,10 +5,10 @@ m_proton = 938.272089           # [MeV]
 m = (m_neutron + m_proton) / 2  # [MeV]
 pot = chiral
 map = trns
-Nq = 40
-Nq1 = 25
+Nq = 60
+Nq1 = 50
 p1 = 2.5                        # [fm^-1]
-p2 = 6.0                        # [fm^-1]
+p2 = 10.0                        # [fm^-1]
 p3 = 30.0                       # [fm^-1]
 Jmax = 4
 Elab = [0.001, 0.01, 0.1, 1.0, 10., 20., 50., 100., 200., 300.]         # [MeV]
@@ -16,7 +16,7 @@ channel = np
 factor = 2/pi
 load_pot = False
 pot_file = benchmark_chiral_Nq{Nq}
-output = benchmark_chiral_Nq{Nq}
+output = new_benchmark_chiral_Nq{Nq}
 
 [sampler]
 seed = 213
